[package]
name = "k8s-csi"
version = "0.4.0"
license = "Apache-2.0"
authors = ["kflansburg <kevin.flansburg@gmail.com>"]
categories = ["api-bindings"]
description = "Bindings for Kubernetes CSI"
edition = "2021"
keywords = ["client", "kubernetes", "k8s", "csi"]
repository = "https://github.com/kflansburg/k8s-csi"
documentation = "https://docs.rs/crate/k8s-csi"
readme = "README.md"

[dependencies]
tonic = { version = "0.11", features = ['tls'] }
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.12"

[build-dependencies.tonic-build]
version = "0.11"
default-features = false
features = ["prost", "transport"]

[dev-dependencies]
tokio = { version = "1", features = ['macros', 'net', 'rt-multi-thread'] }
tower = "0.4"
